# star_routes

./: .gitignore  TODO.txt  star-routes.cabal  verslag.md
app/: Main.hs
routes/: gauntlet.star  nebula.star
src/: Constants.hs  Lib.hs  Parser.hs  Types.hs
src/Game/: Logic.hs
src/UI/: Render.hs
test/: Tests.hs
